// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component applies custom container styles when provided: input-with-container-style 1`] = `
<View
  style={
    [
      {
        "marginBottom": 16,
      },
      {
        "marginTop": 20,
        "width": "90%",
      },
    ]
  }
>
  <TextInput
    multiline={false}
    placeholder="Enter text"
    placeholderTextColor="rgba(255, 255, 255, 0.7)"
    style={
      [
        {
          "backgroundColor": "rgba(38, 20, 60, 0.85)",
          "borderColor": "rgba(82, 67, 194, 0.3)",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#FFFFFF",
          "fontSize": 16,
          "padding": 16,
        },
        false,
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input Component renders correctly with default props: default-input 1`] = `
<View
  style={
    [
      {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <TextInput
    multiline={false}
    placeholder="Enter text"
    placeholderTextColor="rgba(255, 255, 255, 0.7)"
    style={
      [
        {
          "backgroundColor": "rgba(38, 20, 60, 0.85)",
          "borderColor": "rgba(82, 67, 194, 0.3)",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#FFFFFF",
          "fontSize": 16,
          "padding": 16,
        },
        false,
        undefined,
        undefined,
      ]
    }
    testID="test-input"
  />
</View>
`;
